# dosh

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.local  dosh.cabal  flake.nix  fourmolu.yaml
.github/workflows/: ci.yml
app/: Main.hs
dosh/: dosh.cabal
dosh-prelude/: dosh-prelude.cabal
dosh-prelude/src/Dosh/: Prelude.hs
dosh/app/: Main.hs
dosh/src/Data/Sequence/: Zipper.hs
dosh/src/Data/Text/: CodeZipper.hs
dosh/src/Dosh/: Cell.hs  Notebook.hs  Util.hs
dosh/src/Dosh/GHC/: Client.hs  Evaluator.hs  Lexer.hs  Parser.hs  Server.hs
dosh/src/Dosh/LSP/: Client.hs  Document.hs  Server.hs
dosh/src/Reflex/Vty/Widget/Input/: Code.hs
dosh/test/Data/Sequence/: ZipperSpec.hs
dosh/test/Data/Text/: CodeZipperSpec.hs
dosh/test/Dosh/GHC/: LexerSpec.hs  ParserSpec.hs
dosh/test/Test/Hspec/Expectations/: Extra.hs
lsp-client/: lsp-client.cabal
lsp-client/src/Language/LSP/: Client.hs
lsp-client/src/Language/LSP/Client/: Compat.hs  Decoding.hs  Exceptions.hs  Session.hs
lsp-client/test/Language/LSP/: ClientSpec.hs
src/: MyLib.hs  Util.hs
src/Data/Sequence/: Zipper.hs
src/Data/Text/: CodeZipper.hs
src/Dosh/: Cell.hs  EchoServer.hs  HLS.hs  Notebook.hs  Server.hs  Util.hs
src/Dosh/GHC/: Client.hs  Evaluator.hs  Parser.hs  Server.hs  Session.hs
src/Dosh/LSP/: Client.hs  Document.hs  Server.hs
src/Reflex/: ExternalRef.hs
src/Reflex/Vty/Widget/Input/: Code.hs
test/Data/Sequence/: ZipperSpec.hs
test/Data/Text/: CodeZipperSpec.hs
test/Dosh/: CellSpec.hs
test/Dosh/GHC/: EvaluatorSpec.hs  ParserSpec.hs
test/Test/Hspec/Expectations/: Extra.hs
