cabal-version:      3.0
name:               dosh
version:            23.1
synopsis:           The power of Haskell in your terminal!
homepage:           https://github.com/ners/dosh
license:            GPL-3.0-or-later
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
category:           System
build-type:         Simple

common common
    default-language: GHC2021
    ghc-options:
        -Wall
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        ExplicitNamespaces
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
    build-depends:
        base,
        bytestring,
        data-default,
        generic-lens,
        lens,
        lifted-async,
        reflex,
        reflex-vty,
        text,
        unliftio

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Dosh.Cell,
        Dosh.GHC.Client,
        Dosh.GHC.Server,
        Dosh.GHC.Session,
        Dosh.LSP.Client,
        Dosh.LSP.Server,
        Dosh.Notebook,
        Dosh.Util
    build-depends:
        containers,
        deepseq,
        exceptions,
        ghc,
        ghc-paths,
        ghcide,
        haskell-language-server,
        hls-plugin-api,
        knob,
        lsp,
        lsp-test,
        lsp-types,
        mtl,
        process,
        ref-tf,
        vty

executable dosh
    import:           common
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -with-rtsopts=-T
    build-depends:
        dosh

test-suite dosh-test
    import:           common
    ghc-options:      -threaded
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        dosh,
        hspec,
        vty
