cabal-version:      3.0
name:               dosh
version:            23.1
synopsis:           The power of Haskell in your terminal!
homepage:           https://github.com/ners/dosh
license:            GPL-3.0-or-later
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
category:           System
build-type:         Simple

common common
    default-language: GHC2021
    ghc-options:
        -O2
        -j
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns
    build-depends:
        dosh-prelude

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Data.Text.CodeZipper,
        Data.Sequence.Zipper,
        Dosh.Cell,
        Dosh.GHC.Client,
        Dosh.GHC.Parser,
        Dosh.GHC.Evaluator,
        Dosh.GHC.Server,
        Dosh.GHC.Session,
        Dosh.LSP.Client,
        Dosh.LSP.Server,
        Dosh.Notebook,
        Dosh.Util
    other-modules:
        Reflex.Vty.Widget.Input.Code
    build-depends:
        base,
        bytestring,
        containers,
        data-default,
        exceptions,
        extra,
        generic-lens,
        ghc,
        ghc-paths,
        ghc-syntax-highlighter,
        ghcide,
        hls-plugin-api,
        lens,
        lifted-async,
        lsp-test,
        lsp-types,
        monad-control,
        mtl,
        process,
        reflex,
        reflex-vty,
        skylighting,
        skylighting-core,
        template-haskell,
        transformers-base,
        unordered-containers,
        uuid,
        text,
        vty

executable dosh
    import:           common
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N
        -with-rtsopts=-T
        -g3
    build-depends:
        dosh,
        reflex,
        reflex-vty

test-suite dosh-test
    import:           common
    ghc-options:      -threaded
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        QuickCheck,
        async,
        base,
        bytestring,
        dosh,
        extra,
        ghc,
        ghc-paths,
        hspec,
        process,
        quickcheck-text,
        text
    other-modules:
        Dosh.GHC.ParserSpec,
        Dosh.GHC.EvaluatorSpec,
        Data.Sequence.ZipperSpec,
        Data.Text.CodeZipperSpec,
        Test.Hspec.Expectations.Extra,
    build-tools-depends: hspec-discover:hspec-discover
