cabal-version:      3.0
name:               dosh
version:            23.3
synopsis:           The power of Haskell in your terminal!
homepage:           https://github.com/ners/dosh
license:            GPL-3.0-or-later
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
category:           System
build-type:         Simple

common common
    default-language: GHC2021
    ghc-options:
        -O0
        -j
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns
    build-depends:
        dosh-prelude

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Data.Sequence.Zipper,
        Data.Text.CodeZipper,
        Dosh.Cell,
        Dosh.GHC.Client,
        Dosh.GHC.Evaluator,
        Dosh.GHC.Lexer,
        Dosh.GHC.Parser,
        Dosh.GHC.Server,
        Dosh.GHC.Session,
        Dosh.LSP.Client,
        Dosh.LSP.Document,
        Dosh.LSP.Server,
        Dosh.Notebook,
        Dosh.Util
    other-modules:
        Reflex.Vty.Widget.Input.Code
    build-depends:
        base,
        bytestring,
        containers,
        data-default,
        exceptions,
        extra,
        generic-lens,
        ghc,
        ghc-paths,
        ghc-syntax-highlighter,
        ghcide,
        haskell-language-server,
        lens,
        lsp-client,
        lsp-types,
        mtl,
        process,
        reflex,
        reflex-vty,
        skylighting,
        skylighting-core,
        template-haskell,
        text,
        these,
        unordered-containers,
        uuid,
        vty

executable dosh
    import:           common
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:
        -threaded
        -prof
        -rtsopts
        -with-rtsopts=-N
        -with-rtsopts=-T
        ---with-rtsopts=-xc
    build-depends:
        dosh,
        reflex,
        reflex-vty,
        text

test-suite dosh-test
    import:           common
    ghc-options:      -threaded
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        QuickCheck,
        base,
        containers,
        dosh,
        extra,
        ghcide,
        hspec,
        quickcheck-text,
        text
    other-modules:
        Data.Sequence.ZipperSpec,
        Data.Text.CodeZipperSpec,
        Dosh.GHC.EvaluatorSpec,
        Dosh.GHC.LexerSpec,
        Dosh.GHC.ParserSpec,
        Test.Hspec.Expectations.Extra,
