cabal-version:      3.0
name:               lsp-client
version:            0.0.1
synopsis:           Haskell library for Language Server Protocol clients
homepage:           https://github.com/ners/dosh
license:            GPL-3.0-or-later
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch
category:           System
build-type:         Simple

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        RecursiveDo
        TypeFamilies
        ViewPatterns
    build-depends:
        aeson,
        base,
        bytestring,
        lens,
        lsp-types,
        unliftio,

library
    import:           common
    hs-source-dirs:   src
    build-depends:
        Diff,
        Glob,
        aeson-pretty,
        co-log-core,
        data-default,
        dependent-map,
        directory,
        filepath,
        generic-lens,
        hashable,
        lsp,
        mtl,
        stm,
        text,
        text-rope,
        unordered-containers,
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    exposed-modules:
        Language.LSP.Client,
        Language.LSP.Client.Compat,
        Language.LSP.Client.Decoding,
        Language.LSP.Client.Encoding,
        Language.LSP.Client.Exceptions,
        Language.LSP.Client.Session

test-suite spec
    import:           common
    ghc-options:      -threaded -prof
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        QuickCheck,
        extra,
        hspec,
        lsp-client,
        process,
    other-modules:
        Language.LSP.ClientSpec
